# ai-rs

./: Cargo.toml
ai/: Cargo.toml
ai-proxy/: Cargo.toml
ai-proxy/src/: config_tui.rs  doctor.rs  server.rs
ai/src/auth/: config.rs  mod.rs
ai/src/oauth/: google_antigravity.rs  google_gemini_cli.rs
ai/src/providers/: anthropic.rs
examples/: c00-readme.rs  c01-conv.rs  c02-auth.rs  c04-chat-options.rs  c05-model-names.rs  c06-model-spec.rs  c06-target-resolver.rs  c07-image.rs  c09-cache-ttl.rs  c20-tooluse.rs  c21-tooluse-streaming.rs  c22-tooluse-deterministic.rs  c23-tool-web-search.rs  c99-google-gcp.rs  c99-zai.rs  e01-embed-basic.rs
src/: error.rs  lib.rs
src/adapter/: adapter_types.rs  dispatcher.rs
src/adapter/adapters/: support.rs
src/adapter/adapters/aliyun/: adapter_impl.rs
src/adapter/adapters/anthropic/: adapter_impl.rs  streamer.rs
src/adapter/adapters/bigmodel/: adapter_impl.rs
src/adapter/adapters/cohere/: adapter_impl.rs
src/adapter/adapters/deepseek/: adapter_impl.rs
src/adapter/adapters/fireworks/: adapter_impl.rs
src/adapter/adapters/gemini/: adapter_impl.rs
src/adapter/adapters/groq/: adapter_impl.rs
src/adapter/adapters/mimo/: adapter_impl.rs
src/adapter/adapters/nebius/: adapter_impl.rs
src/adapter/adapters/ollama/: adapter_impl.rs
src/adapter/adapters/openai/: adapter_impl.rs  adapter_shared.rs
src/adapter/adapters/openai_resp/: adapter_impl.rs
src/adapter/adapters/openai_resp/resp_types/: mod.rs
src/adapter/adapters/together/: adapter_impl.rs
src/adapter/adapters/xai/: adapter_impl.rs
src/adapter/adapters/zai/: adapter_impl.rs  mod.rs
src/chat/: chat_message.rs  mod.rs
src/client/: auth_data.rs  builder.rs  client_impl.rs  client_types.rs  config.rs  endpoint.rs  headers.rs  mod.rs  model_spec.rs  service_target.rs
src/embed/: mod.rs
src/webc/: web_stream.rs
tests/: tests_p_anthropic.rs  tests_p_cohere.rs  tests_p_deepseek.rs  tests_p_deepseek_reasoning.rs  tests_p_fireworks.rs  tests_p_gemini.rs  tests_p_groq.rs  tests_p_groq_reasoning.rs  tests_p_ollama.rs  tests_p_ollama_reasoning.rs  tests_p_openai.rs  tests_p_openai_embeddings.rs  tests_p_openai_reasoning.rs  tests_p_openai_resp.rs  tests_p_together.rs  tests_p_xai.rs  tests_p_zai.rs  tests_p_zai_reasoning.rs
tests/support/: asserts.rs  common_tests.rs  helpers.rs  seeders.rs  test_error.rs
zeroai-proxy/: Cargo.toml
zeroai-proxy/src/: config_tui.rs  doctor.rs  main.rs  server.rs
