[workspace]
members = [".", "zeroai-proxy"]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "test-util", "io-util"] }
anyhow = "1"
tracing = { version = "0.1", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[package]
name = "zeroai"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-AI Providers Library for Rust."
keywords = ["generative-ai","openai","chatgpt","gemini","ollama"]
homepage = "https://github.com/hushhenry/zeroai"
repository = "https://github.com/hushhenry/zeroai"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# missing_docs = "warn"

[dependencies]
# -- Tracing
tracing = { version = "0.1", features = ["default"] }
# -- Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "test-util", "io-util"]}
futures = "0.3"
tokio-stream = "0.1"
# -- Json
serde = { version = "1", features = ["derive", "rc"] } # Opted to rc for Arc<T> serialization
serde_json = "1"
serde_with = "3"
# -- Web
reqwest = {version = "0.13",  features = ["json", "stream", "form"]}
eventsource-stream = "0.2"
bytes = "1.6"
# -- File
base64 = "0.22.0"
mime_guess = "2"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
value-ext = "0.1.3"
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
# -- Auth / OAuth
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
async-trait = "0.1"
sha2 = "0.10"
rand = "0.9"
url = "2"
serde_urlencoded = "0.7"
open = "5"

[dev-dependencies]
simple-fs = "0.10"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serial_test = "3.2"
base64 = "0.22.0"  # Check for the latest version
bitflags = "2.8"
gcp_auth = "0.12"
